# perseus-size-opt

./: .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  bonnie.toml
examples/simple/: .gitignore  Cargo.toml  index.html
examples/simple/src/: lib.rs
src/: lib.rs
